New endpoints + Authentication
